bashrc-nedge now.

--- a/templates/default/root/bashrc-nedge.erb
+++ b/templates/default/root/bashrc-nedge.erb
@@ -22,4 +22,4 @@ echo 167772160 > /proc/sys/net/core/wmem_default
 echo 167772160 > /proc/sys/net/core/wmem_max
 
 source /opt/nedge/env.sh
-echo "env.sh sourced"
+echo "env.sh sourced in .bashrc-nedge"
