--- a/templates/default/root/bashrc-nedge.erb
+++ b/templates/default/root/bashrc-nedge.erb
@@ -14,7 +14,7 @@ alias k="/opt/nedge/scripts/dev/gw-kill.sh"
 alias check="ps aux | grep ccow && ps aux | grep lt"
 
 alias gw_check="/opt/nedge/scripts/dev/gw-check"
-alias gw_start="rm -rf /data/*/{nameindex,chunks}/* && /opt/nedge/src/ccow/test/cluster_test ; cd /opt/nedge/src/nmf && CCOW_LOG_LEVEL=4 CCOW_LOG_STDOUT=1 ./nefstart -a"
+alias gw_start="rm -rf /data/*//{*,.*} && /opt/nedge/src/ccow/test/cluster_test ; cd /opt/nedge/src/nmf && CCOW_LOG_LEVEL=4 CCOW_LOG_STDOUT=1 ./nefstart -a"
 alias gw_start_delayed="/opt/nedge/etc/init.d/corosync restart ; rm -rf /data/*/* ; rm -rf /data/*/.* ; /opt/nedge/src/ccow/test/cluster_test ; cd /opt/nedge/src/nmf && unset CCOW_LOG_STDOUT && CCOW_LOG_LEVEL=4 CCOW_LOG_COLORS=1 CCOW_BENCHMARK_IMMEDIATE_BUCKET_UPDATE=1 NEDGE_ENV=test ./nefstart -a"
 
 echo 167772160 > /proc/sys/net/core/rmem_default
